4.monitoring-healthcheck-backup-cluster/uptime-kuma/uptime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: uptime.viettu.vn
      http:
        paths:
          - backend:
              service:
                name: devopseduvn-uptime-uptime-kuma
                port:
                  number: 3001
            path: /
            pathType: Prefix
